feat(cookie): enable color change and default value

--- a/local/modules/ushakov.cookie/install/bitrix/css/ushakov.cookie/style.css
+++ b/local/modules/ushakov.cookie/install/bitrix/css/ushakov.cookie/style.css
@@ -54,6 +54,11 @@
     text-decoration: none;
 }
 
+.ushakov-cookie-bg-custom {
+  background: var(--ushakov-cookie-bg, rgba(0, 0, 0, 0.85)) !important;
+}
+
+
 @media (min-width: 540px) {
     .ushakov-cookie br {
         display: none;
