--- a/local/modules/ushakov.cookie/install/bitrix/css/ushakov.cookie/style.css
+++ b/local/modules/ushakov.cookie/install/bitrix/css/ushakov.cookie/style.css
@@ -19,7 +19,7 @@
     justify-content: space-between;
     align-items: center;
     border-radius: 6px 6px 0 0;
-    color: #f1f1f1!important;
+    color:#f1f1f1;
 }
 
 .ushakov-cookie img {
