--- a/local/modules/ushakov.cookie/install/bitrix/css/ushakov.cookie/style.css
+++ b/local/modules/ushakov.cookie/install/bitrix/css/ushakov.cookie/style.css
@@ -35,16 +35,12 @@
     font-size: 14px
 }
 
-.ushakov-cookie img {
-    margin-left: 8px;
-    margin-top: 3px;
-    margin-bottom: 2px;
-    cursor: pointer;
-    width: 15px;
-    height: 15px;
+.ushakov-cookie__actions {
+    display: flex;
+    align-items: center;
 }
 
-.ushakov-cookie .button {
+.ushakov-cookie__accept {
     text-transform: uppercase;
     font-size: .8em;
     background: #0000007a;
@@ -53,14 +49,33 @@
     margin-left: 6px;
     cursor: pointer;
     user-select: none;
+    border: none;
+    color: inherit;
 }
 
-.ushakov-cookie .button:hover {
+.ushakov-cookie__accept:hover {
     background: #000000e3;
 }
 
-.ushakov-cookie img:hover {
-    opacity: .8
+.ushakov-cookie__close {
+    background: transparent;
+    border: none;
+    margin-left: 8px;
+    margin-top: 3px;
+    margin-bottom: 2px;
+    padding: 0;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.ushakov-cookie__close img {
+    width: 15px;
+    height: 15px;
+}
+
+.ushakov-cookie__close:hover {
+    opacity: .8;
 }
 
 .ushakov-cookie a {
