--- a/local/modules/ushakov.cookie/install/bitrix/css/ushakov.cookie/style.css
+++ b/local/modules/ushakov.cookie/install/bitrix/css/ushakov.cookie/style.css
@@ -48,11 +48,12 @@
     text-transform: uppercase;
     font-size: .8em;
     background: #0000007a;
-    padding: 2px 7px;
-    border-radius: 4px;
+    padding: 5px 9px;
+    border-radius: 5px;
     margin-left: 6px;
     cursor: pointer;
     user-select: none;
+    color: #f1f1f1;
 }
 
 .ushakov-cookie .button:hover {
