--- a/local/modules/ushakov.cookie/install/bitrix/css/ushakov.cookie/style.css
+++ b/local/modules/ushakov.cookie/install/bitrix/css/ushakov.cookie/style.css
@@ -36,12 +36,11 @@
 }
 
 .ushakov-cookie img {
-    margin-left: 8px;
-    margin-top: 3px;
-    margin-bottom: 2px;
-    cursor: pointer;
-    width: 15px;
-    height: 15px;
+  /* УБРАЛ marginы, они ломают углы */
+  margin: 0;            /* было: margin-left/top/bottom */
+  cursor: pointer;
+  width: 15px;
+  height: 15px;
 }
 
 .ushakov-cookie .button {
@@ -56,13 +55,16 @@
     color: #f1f1f1;
 }
 
-.ushakov-cookie .button:hover {
+/* Убираем фиксированный hover-эффект, чтобы он не конфликтовал с настройками модуля */
+/* .ushakov-cookie .button:hover {
     background: #000000e3;
-}
+} */
 
-.ushakov-cookie img:hover {
+/* .ushakov-cookie img:hover {
     opacity: .8
-}
+} */
+/* Чтобы img-иконка не подпрыгивала при hover */
+.ushakov-cookie img:hover { opacity: 0.85; } 
 
 .ushakov-cookie a {
     text-decoration: none;
